--- a/charts/kai/templates/nats-manager/serviceaccount.yaml
+++ b/charts/kai/templates/nats-manager/serviceaccount.yaml
@@ -1,12 +1,13 @@
-{{- if .Values.natsManager.serviceAccount.create }}
+{{ if .Values.natsManager.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "nats-manager.serviceAccountName" . }}
+  name: {{ include "kai.natsManagerServiceAccountName" . }}
   labels:
-    {{- include "nats-manager.labels" . | nindent 4 }}
-  {{- if .Values.natsManager.serviceAccount.annotations }}
+    {{- include "kai.natsManagerLabels" . | nindent 4 }}
+  {{- with .Values.natsManager.serviceAccount.annotations }}
   annotations:
-    {{ toYaml .Values.natsManager.serviceAccount.annotations | indent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
+automountServiceAccountToken: {{ .Values.natsManager.serviceAccount.automount | default "false" }}
 {{- end }}
