--- a/charts/kai/Chart.yaml
+++ b/charts/kai/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 type: application
 name: kai
 description: A Helm chart to deploy KAI
-version: 0.2.0
-appVersion: "0.3.0-develop.17"
+version: 1.0.0
+appVersion: "1.0.0"
 sources:
   - https://gitlab.intelygenz.com/konstellation-io/kai/kai
 maintainers:
@@ -18,26 +18,32 @@ keywords:
   - kubernetes
   - machine learning
 dependencies:
+  - name: konstellation-base
+    alias: keycloak
+    version: "1.1.2"
+    repository: oci://ghcr.io/konstellation-io/helm-charts
+    condition: keycloak.enabled
   - name: minio
-    version: "5.0.14"
+    version: "5.4.0"
     repository: https://charts.min.io/
-  - name: grafana
-    version: "7.0.3"
-    repository: "https://grafana.github.io/helm-charts"
-    condition: grafana.enabled
-  - name: loki
-    repository: "https://grafana.github.io/helm-charts"
-    version: "5.36.3"
-    condition: loki.enabled
-  - name: prometheus
-    version: "25.4.0"
-    repository: "https://prometheus-community.github.io/helm-charts"
-    condition: prometheus.enabled
-  - name: redis
-    version: "18.2.1"
-    repository: "https://charts.bitnami.com/bitnami"
-    condition: redis.enabled
+    condition: minio.enabled
+  - name: mongodb
+    version: "16.2.1"
+    repository: oci://registry-1.docker.io/bitnamicharts
+    condition: mongodb.enabled
   - name: nats
-    version: "1.1.9"
-    repository: "https://nats-io.github.io/k8s/helm/charts"
+    version: "1.2.10"
+    repository: https://nats-io.github.io/k8s/helm/charts
     condition: nats.enabled
+  - name: postgresql
+    version: "15.5.38"
+    repository: oci://registry-1.docker.io/bitnamicharts
+    condition: postgresql.enabled
+  - name: redis
+    version: "20.7.0"
+    repository: oci://registry-1.docker.io/bitnamicharts
+    condition: redis.enabled
+  - name: vault
+    version: "0.29.1"
+    repository: https://helm.releases.hashicorp.com
+    condition: vault.enabled
