--- a/charts/kai/templates/admin-api/serviceaccount.yaml
+++ b/charts/kai/templates/admin-api/serviceaccount.yaml
@@ -1,12 +1,13 @@
-{{- if .Values.adminApi.serviceAccount.create -}}
+{{ if .Values.adminApi.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "admin-api.serviceAccountName" . }}
+  name: {{ include "kai.adminApiServiceAccountName" . }}
   labels:
-    {{- include "admin-api.labels" . | nindent 4 }}
+    {{- include "kai.adminApiLabels" . | nindent 4 }}
   {{- with .Values.adminApi.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+automountServiceAccountToken: {{ .Values.adminApi.serviceAccount.automount | default "false" }}
 {{- end }}
