--- a/charts/kai/templates/k8s-manager/serviceaccount.yaml
+++ b/charts/kai/templates/k8s-manager/serviceaccount.yaml
@@ -1,12 +1,13 @@
-{{- if .Values.k8sManager.serviceAccount.create }}
+{{ if .Values.k8sManager.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-manager.serviceAccountName" . }}
+  name: {{ include "kai.k8sManagerServiceAccountName" . }}
   labels:
-    {{- include "k8s-manager.labels" . | nindent 4 }}
-  {{- if .Values.k8sManager.serviceAccount.annotations }}
+    {{- include "kai.k8sManagerLabels" . | nindent 4 }}
+  {{- with .Values.k8sManager.serviceAccount.annotations }}
   annotations:
-    {{ toYaml .Values.k8sManager.serviceAccount.annotations | indent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
+automountServiceAccountToken: {{ .Values.k8sManager.serviceAccount.automount | default "false" }}
 {{- end }}
