--- a/charts/kai/templates/nats-manager/configmap.yaml
+++ b/charts/kai/templates/nats-manager/configmap.yaml
@@ -1,13 +1,21 @@
+{{- range .Values.natsManager.configMaps }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "nats-manager.fullname" . }}
+  name: {{ include "kai.natsManager.name" $ }}-{{ .name }}
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "0"
   labels:
-    {{- include "kai.labels" . | nindent 4 }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "kai.natsManagerLabels" . | nindent 4 }}
 data:
-  KAI_DEVELOPMENT_MODE: "{{ .Values.developmentMode }}"
-  KAI_RELEASE_NAME: "{{ .Release.Name }}"
-
-  # NATS Streaming
-  KAI_NATS_URL: "{{ include "nats.url" . }}"
+  {{- range $key, $value := .data }}
+  {{- if regexMatch "\n" $value }}
+  {{ $key }}: |
+    {{ $value | nindent 4 | trim }}
+  {{- else }}
+  {{ $key }}: {{ $value }}
+  {{- end }}
+  {{- end }}
+{{- end }}
