--- a/charts/kai/templates/nats-manager/secret.yaml
+++ b/charts/kai/templates/nats-manager/secret.yaml
@@ -1,15 +1,15 @@
-{{- range .Values.adminApi.secrets }}
+{{- range .Values.natsManager.secrets }}
 ---
 apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: {{ include "kai.adminApi.name" $ }}-{{ .name }}
+  name: {{ include "kai.natsManager.name" $ }}-{{ .name }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "0"
   labels:
-    {{- include "kai.adminApiLabels" . | nindent 4 }}
+    {{- include "kai.natsManagerLabels" . | nindent 4 }}
 data:
   {{- range $key, $value := .data }}
   {{- if regexMatch "\n" $value }}
