--- a/charts/kai/templates/nats-manager/service.yaml
+++ b/charts/kai/templates/nats-manager/service.yaml
@@ -1,15 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nats-manager.fullname" . }}
+  name: {{ include "kai.natsManager.name" . }}
   labels:
-    {{- include "nats-manager.labels" . | nindent 4 }}
+    {{- include "kai.natsManagerLabels" . | nindent 4 }}
 spec:
   clusterIP: None
+  type: ClusterIP
   ports:
-    - name: grpc
-      port: 50051
+    - port: {{ .Values.natsManager.service.port }}
+      targetPort: {{ .Values.natsManager.env.KAI_ADMIN_API_PORT | default (.Values.natsManager.service.targetPort | default .Values.natsManager.service.port) }}
       protocol: TCP
-      targetPort: grpc
+      name: grpc
+    {{- range $port := .Values.natsManager.service.extraPorts }}
+    - name: {{ $port.name }}
+      port: {{ $port.port }}
+      targetPort: {{ $port.targetPort }}
+      protocol: TCP
+    {{- end }}
   selector:
-    {{- include "nats-manager.selectorLabels" . | nindent 4 }}
+    {{- include "kai.selectorK8sManagerLabels" . | nindent 4 }}
